--- a/Pipfile
+++ b/Pipfile
@@ -6,6 +6,10 @@ verify_ssl = true
 [dev-packages]
 
 [packages]
+beautifulsoup4 = "*"
+requests = "*"
+python-dateutil = "*"
+pytest = "*"
 
 [requires]
 python_version = "3.6"
