--- a/Pipfile
+++ b/Pipfile
@@ -10,7 +10,8 @@ beautifulsoup4 = "*"
 requests = "*"
 python-dateutil = "*"
 pytest = "*"
-sqlite3 = "*"
+pandas = "*"
+numpy = "*"
 
 [requires]
 python_version = "3.6"
